<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.educar.cryptoapp.FragmentCopia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ultimaCopia"
            android:textColor="@color/ColorPrimary"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:id="@+id/tv_tituloUltimaCopia"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/iv_backup"
                android:src="@drawable/backup3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_fechaUltimaCopia"
                    android:text="@string/fechaUltimaCopia"
                    android:textColor="@color/ColorPrimaryText"
                    android:textSize="17dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_alojamientoCopia"
                    android:textColor="@color/ColorPrimaryText"
                    android:textSize="17dp"
                    android:text="GoogleDrivegggg"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <com.andexert.library.RippleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


               >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/realizarCopia"
                android:layout_marginTop="30dp"
                android:id="@+id/bt_hacerCopia"
                android:textColor="@color/ColorText_Icon"
                android:background="@drawable/fondo_boton_redondo_primary"/>
            </com.andexert.library.RippleView>
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperarDatos"
            android:textColor="@color/ColorPrimary"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:id="@+id/tv_tituloRecuperarDatos"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="17dp"
                android:text="@string/textoRecuperarCopia"
                android:id="@+id/tv_textoRecuperarCopia"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/activity_horizontal_margin">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurarCopia"

                android:id="@+id/bt_restaurarCopia"
                android:textColor="@color/ColorText_Icon"
                android:background="@drawable/fondo_boton_redondo_primary"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
