<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/blue_grey_oscuro"
    tools:context=".actividades.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/fondo_redondo_gris"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/tv_acceso"
            android:text="@string/acceso"
            android:textColor="@color/amarillo"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:background="@color/gris_muy_claro"
                android:src="@drawable/lock2"
                android:padding="5dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/til_pass"
                android:layout_centerHorizontal="true"
                android:background="@color/ColorPrimary"
                app:hintTextAppearance="@style/Hint"
                android:textColorHint="@color/blanco_perfecto"

                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_pass"
                    android:hint="@string/hint_pass"
                    android:singleLine="true"
                    android:textColor="@color/blanco_perfecto"
                    />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:background="@color/gris_muy_claro"
                android:src="@drawable/lock2"
                android:padding="5dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/til_repass"
                app:hintTextAppearance="@style/Hint"
                android:layout_centerHorizontal="true"
                android:background="@color/ColorPrimary"
                android:textColorHint="@color/blanco_perfecto"
                android:padding="5dp"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_rePass"
                    android:textColor="@color/blanco_perfecto"
                    android:hint="@string/hint_rePass"
                    android:textColorHint="@color/blanco_perfecto"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/bt_acceder"
            android:text="@string/acceder"
            android:textColor="@color/blanco_perfecto"
            android:background="@drawable/fondo_redondo_gris"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_avisoPass"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/avisoPass"
            android:textColor="@color/blanco_perfecto"/>
    </LinearLayout>


</LinearLayout>
