<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.educar.cryptoapp.actividades.CuentaActivity">
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_cuenta"></include>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:id="@+id/lo_fondoImagen"
        android:background="@color/ColorPrimary"
       >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_iconoCuenta"
            android:src="@drawable/wow_grande"
            android:layout_centerInParent="true"

           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/ColorText_Icon"
            android:layout_centerInParent="true"
            android:id="@+id/tv_nombreLogo"
            android:layout_below="@+id/iv_iconoCuenta"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textColor="@color/ColorSecundaryText"
            android:textSize="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/ColorPrimaryText"
                android:inputType="textPassword"
                android:textSize="20dp"
                android:id="@+id/tv_usuario"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/copia"
                android:textColor="@color/ColorPrimary"
                android:id="@+id/bt_copiaUsuario"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"
            android:textColor="@color/ColorSecundaryText"
            android:textSize="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/ColorPrimaryText"
                android:inputType="textPassword"
                android:textSize="20dp"
                android:id="@+id/tv_pass"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/copia"
                android:textColor="@color/ColorPrimary"
                android:id="@+id/bt_copiaPass"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ojo_tachado"
            android:id="@+id/iv_ojo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_modificar"
                    android:text="@string/modificar"
                    android:layout_toLeftOf="@+id/bt_elminar"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/fondo_boton_redondo_primary" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_elminar"
                    android:text="@string/eliminar"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/fondo_boton_redondo_primary"
                    />


        </RelativeLayout>


    </LinearLayout>



</LinearLayout>
