<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.educar.cryptoapp.FragmentNuevo">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nuevoRegistro"
                android:padding="20dp"
                android:textColor="@color/ColorPrimary"
                android:textSize="20dp"
                android:id="@+id/tv_textoNuevoRegistro"
                android:layout_gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingLeft="0dp"
            android:paddingRight="45dp">
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt_seleccionaIcono"
                android:text="@string/selectIcon"
                android:background="@drawable/fondo_boton_redondo_primary"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/iv_imageCuenta"
                android:layout_marginLeft="5dp"
                android:layout_centerInParent="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_info"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/info"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="50dp"
            android:paddingLeft="55dp">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/android_material_design_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Categorías"
                app:met_floatingLabel="highlight"
                app:theme="@style/spinnerHint"
                />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/til_nombreRegistro"
                android:layout_centerHorizontal="true"
                android:theme="@style/EditTextHint"
                android:paddingLeft="-5dp"
                android:paddingRight="-5dp"
                app:errorTextAppearance="@style/Error"
                >

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_nombreRegistro"
                    android:hint="@string/hint_nombreRegistro"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingLeft="-5dp"
            android:paddingRight="45dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/gris_muy_claro"
                android:src="@drawable/user"
                android:padding="5dp"
                android:id="@+id/iv_usuario"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/til_registerUsuario"
                android:layout_centerHorizontal="true"
                app:theme="@style/EditTextHint"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_registerUsuario"
                    android:hint="@string/hint_usuario"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingRight="45dp"
            android:paddingLeft="-5dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/gris_muy_claro"
                android:src="@drawable/lock2"
                android:padding="5dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/til_registerPass"
                android:layout_centerHorizontal="true"
                app:theme="@style/EditTextHint"
                app:errorTextAppearance="@style/Error"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                >

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_registerPass"
                    android:hint="@string/hint_pass"
                    android:singleLine="true"

                    />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addRegistro"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:id="@+id/bt_addRegister"
                    android:textColor="@color/ColorText_Icon"
                    android:background="@drawable/fondo_boton_redondo_primary"/>

        </LinearLayout>
    </ScrollView>




</FrameLayout>


